# physics-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  physics-playground
assets/: .gitattributes
assets/default/models/cube/: cube.gltf
assets/default/models/icosphere/: icosphere.glb
assets/default/shaders/: axes.frag  axes.vert  blinn_phong.frag  blinn_phong.vert  debug.frag  debug.vert  depth.vert  error.frag  error.vert  grid.frag  grid.vert
assets/models/: cube.glb  cube_smooth.glb  ground.glb  ground_smooth.glb  icosphere.glb  icosphere_lowres.glb  icosphere_lowres_smooth.glb  icosphere_smooth.glb  rectangle.glb  simplex.glb  simplex_smooth.glb  suzanne.glb  suzanne_high_res.glb  triangle.glb  triangle_0.glb  triangle_1.glb
geomath/: CMakeLists.txt
geomath/include/: geomath.h
geomath/src/: matrix.h  vector.h  vector3d.cpp
geomath/tests/: vector.cpp
src/: game_loop.cpp  game_loop.h  main.cpp  utils.h
src/apps/: playground.cpp  raycasting.cpp
terathonmath/: CMakeLists.txt
tics/: CMakeLists.txt
tics/geomath/: CMakeLists.txt
tics/geomath/include/: geomath.h
tics/geomath/src/: vector2d.cpp  vector3d.cpp
tics/include/: tics.h
tics/src/: collision_area.cpp  collision_area_solver.cpp  collision_test.cpp  impulse_solver.cpp  position_solver.cpp  raycast.cpp  rigid_body.cpp  static_body.cpp  world.cpp
